--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/public/CSS/style.css">
+    <script src="https://kit.fontawesome.com/c5b5023680.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <div id="container">
+        <header>navigateur</header>
+        <main>Filtres</main>
+        <article class="article1">Article 1</article>
+        <aside>aside</aside>
+        <article class="article2">Article 2</article>
+        <footer>Footer</footer>
+    </div>
     
 </body>
 </html>
