--- a/index.html
+++ b/index.html
@@ -10,7 +10,36 @@
 </head>
 <body>
     <div id="container">
-        <header>navigateur</header>
+        <header>
+            <nav>
+                <img src="" alt="">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <button>
+                                S'incrire
+                            </button>
+                        </a>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#">
+                            <button>
+                                Hebergement
+                            </button>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <button>
+                                Activités
+                            </button>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <main>Filtres</main>
         <article class="article1">Article 1</article>
         <aside>aside</aside>
