--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Organiser vos vacances avec Reservia !" />
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Reservia"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="#"/>
+    <meta property="og:image" content="#"/>
+    <meta property="og:description" content="Organiser vos vacances avec Reservia !"/> 
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,39 +24,160 @@
     <div id="container">
         <header>
             <nav>
-                <img src="" alt="">
+                <a href="./index.html"><img src="./logo.png" alt="logonav2" height="100" /></a>
+                <ul class="none"></ul>
                 <ul>
                     <li>
-                        <a href="#">
-                            <button>
-                                S'incrire
-                            </button>
-                        </a>
+                        <a href="#">S'incrire</a>
                     </li>
                 </ul>
                 <ul>
                     <li>
-                        <a href="#">
-                            <button>
-                                Hebergement
-                            </button>
-                        </a>
+                        <a href="#">Hebergement</a>
                     </li>
+                </ul>
+                <ul>   
                     <li>
-                        <a href="#">
-                            <button>
-                                Activités
-                            </button>
-                        </a>
+                        <a href="#">Activités</a>
                     </li>
                 </ul>
             </nav>
         </header>
-        <main>Filtres</main>
-        <article class="article1">Article 1</article>
-        <aside>aside</aside>
-        <article class="article2">Article 2</article>
-        <footer>Footer</footer>
+        <main>Filtres
+            <ul>
+                <li>
+                    <a href="#">Economique</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Familial</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Romantique</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Animaux autorisés</a>
+                </li>
+            </ul>
+        </main>
+        <article class="article1">Hébergements a Marseille
+            <ul>
+                <li>
+                    <a href="#">Auberge de la Cannebière</a>
+                </li>
+                Nuit a partir de 25€
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Hôtel du port</a>
+                </li>
+                Nuit a partir de 52€
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Hôtel Les mouettes</a>
+                </li>
+                Nuit a partir de 76€
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Hôtel de la mer</a>
+                </li>
+                Nuit a partir de 46€
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Auberge Le Panier</a>
+                </li>
+                Nuit a partir de 23€
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Hôtel chez Amina</a>
+                </li>
+                Nuit a partir de 96€
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Afficher plus</a>
+                </li>
+            </ul>
+        </article>
+        <aside>Les plus populaires
+            <ul>
+                <li>
+                    <a href="#">Hôtel Le soleil du matin</a>
+                </li>
+                Nuit a partir de 128€
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Au coeur de l'aube Chambres d'hôtes</a>
+                </li>
+                Nuit a partir de 71€
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Hôtel Tout bleu et blanc</a>
+                </li>
+                Nuit a partir de 68€
+            </ul>
+        </aside>
+        <article class="article2">Activités a Marseille
+            <ul>
+                <li>
+                    <a href="#">Vieux port</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Port de Pomègues</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">îles du Frioul</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Parc national des Calanques</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Notre-Dame-de-la-Garde</a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="#">Parc Longchamp</a>
+                </li>
+            </ul>
+        </article>
+        <footer>
+            <ul>
+                <li><strong>A propos</strong></li>
+                <li><a href="#">Fonctionnement du site</a></li>
+                <li><a href="#">Conditions générales de vente</a></li>
+                <li><a href="#">Données de confidentialité</a></li>
+            </ul>
+            <ul>
+                <li><strong>hébergements</strong></li>
+                <li><a href="#">Charte qualité</a></li>
+                <li><a href="#">Soumettre votre hôtel</a></li>
+            </ul>
+            <ul>
+                <li><strong>Assistance</strong></li>
+                <li><a href="#">Centre d'aide</a></li>
+                <li><a href="#">Nous contacter</a></li>
+            </ul>
+        </footer>
     </div>
     
 </body>
