--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description" content="Organiser vos vacances avec Reservia !" />
 
     <!-- Twitter Card data -->
@@ -16,7 +19,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site de reservation - Reservia</title>
+    <link rel="icon" href="/Logo/Reservia.svg" />
     <link rel="stylesheet" href="/public/CSS/style.css">
     <script src="https://kit.fontawesome.com/c5b5023680.js" crossorigin="anonymous"></script>
 </head>
@@ -24,19 +28,19 @@
     <div id="container">
         <header>
             <nav>
-                <a href="./index.html"><img src="./logo.png" alt="logonav2" height="100" /></a>
+                <a href="./index.html"><img class="logo" src="./Logo/Reservia.svg" alt="logonav2" height="100" /></a>
                 <ul class="none"></ul>
-                <ul>
+                <ul class="subscribe">
                     <li>
-                        <a href="#">S'incrire</a>
+                        <a href="#">S'inscrire</a>
                     </li>
                 </ul>
-                <ul>
+                <ul class="heberge">
                     <li>
                         <a href="#article1">Hebergement</a>
                     </li>
                 </ul>
-                <ul>   
+                <ul class="activity">   
                     <li>
                         <a href="#">Activités</a>
                     </li>
@@ -44,11 +48,24 @@
             </nav>
         </header>
         <main class="filters">
+        <div class="titleMain">
+            <h1>Trouver votre hébergement pour des vacances de rêves</h1>
+            <p>En plein centre ville ou en pleine nature</p>
+        </div>
+        <div class="search">
+            <i></i>
+            <input type="text" placeholder="Marseille, France">
+            <button>
+                <i></i>
+                <p>Recherche</p>
+            </button>
+
+        </div>
         <div class="filterContenair">   
-            <div>
-                <h2>Filtres</h2>
-            </div>
             <div class="blockFilter">
+                <div>
+                    <h2>Filtres</h2>
+                </div>
                 <a href="#">
                     <div class="filter">
                         <i class="fas fa-money-bill-wave"></i> 
@@ -57,26 +74,26 @@
                 </a>
                 <a href="#">
                     <div class="filter">
-                        <i class="fas fa-money-bill-wave"></i> 
-                        <p>Économique</p> 
+                        <i class="fas fa-child"></i> 
+                        <p>Familial</p> 
                     </div>
                 </a>
                 <a href="#">
                     <div class="filter">
-                        <i class="fas fa-money-bill-wave"></i> 
-                        <p>Économique</p> 
+                        <i class="fas fa-heart"></i> 
+                        <p>Romantique</p> 
                     </div>
                 </a>
                 <a href="#">
                     <div class="filter">
-                        <i class="fas fa-money-bill-wave"></i> 
-                        <p>Économique</p> 
+                        <i class="fas fa-dog"></i> 
+                        <p>Animaux Autorisés</p> 
                     </div>
                 </a>                
             </div>
         </div>            
         </main>
-        <article id="article1" class="article1">
+        <article id="article1">
             <h2>Hébergements a Marseille</h2>
             <div id="cardsArticle1">
                 <a href="#">
@@ -95,8 +112,8 @@
                     </div>                    
                 </div>
             </a>
-                <div class="cardArticle1">
-                    <a href="#">
+            <a href="#">
+                <div class="cardArticle1">                    
                     <div class="cardImage1">
                         <img src="./Projet 2 - Reservia/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="">
                         <div class="cardText1">
@@ -111,8 +128,8 @@
                     </div>
                 </div>
             </a>
+                <a href="#">
                 <div class="cardArticle1">
-                    <a href="#">
                     <div class="cardImage1">
                         <img src="./Projet 2 - Reservia/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="">
                         <div class="cardText1">
@@ -127,8 +144,8 @@
                     </div>
                 </div>
             </a>
+                <a href="#">
                 <div class="cardArticle1">
-                    <a href="#">
                     <div class="cardImage1">
                         <img src="./Projet 2 - Reservia/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="">
                         <div class="cardText1">
@@ -143,8 +160,8 @@
                     </div>
                 </div>
             </a>
+                <a href="#">
                 <div class="cardArticle1">
-                    <a href="#">
                     <div class="cardImage1">
                         <img src="./Projet 2 - Reservia/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="">
                         <div class="cardText1">
@@ -159,8 +176,8 @@
                     </div>
                 </div>
             </a>
+                <a href="#">
                 <div class="cardArticle1">
-                    <a href="#">
                     <div class="cardImage1">
                         <img src="./Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="">
                         <div class="cardText1">
@@ -194,13 +211,15 @@
                 </li>
             </ul>
         </article>
+        
         <aside class="aside1">
             <h2>Les plus populaires</h2>
             <div id="cardsAside1">
                 <a href="#">
                 <div class="cardAside1">
                     <div class="cardImage2">
-                        <img src="#" alt="">
+                        <img src="./Projet 2 - Reservia/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="">
+                    </div>
                         <div class="cardText2">
                             <h3><strong>Hôtel Le soleil du matin</strong></h3>
                             <p>Nuit à partir de 128<strong>€</strong></p>
@@ -209,50 +228,55 @@
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star gray"></i>
-                        </div>
-                    </div>                    
+                        </div>                    
                 </div>
             </a>
+            </div>
+            <div id="cardsAside1">
+                <a href="#">
                 <div class="cardAside1">
-                    <a href="#">
                     <div class="cardImage2">
-                        <img src="#" alt="">
+                        <img src="./Projet 2 - Reservia/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="">
+                    </div>
                         <div class="cardText2">
-                            <h3><strong>Au cœur de l'eau Chambres d'hôtes</strong></h3>
+                            <h3><strong>Au coeur de l'eau Chambres d'hôtes</strong></h3>
                             <p>Nuit à partir de 71<strong>€</strong></p>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star gray"></i>
-                        </div>
-                    </div>
+                        </div>                    
                 </div>
             </a>
-                <div class="cardAside1">
+            </div>
+                       
+                <div id="cardsAside1">
                     <a href="#">
-                    <div class="cardImage2">
-                        <img src="#" alt="">
-                        <div class="cardText2">
-                            <h3><strong>Hôtel Tout bleu et Blanc</strong></h3>
-                            <p>Nuit à partir de 68<strong>€</strong></p>
-                            <i class="fas fa-star blue"></i>
-                            <i class="fas fa-star blue"></i>
-                            <i class="fas fa-star blue"></i>
-                            <i class="fas fa-star blue"></i>
-                            <i class="fas fa-star gray"></i>
+                    <div class="cardAside1">
+                        <div class="cardImage2">
+                            <img src="./Projet 2 - Reservia/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="">
                         </div>
+                            <div class="cardText2">
+                                <h3><strong>Hôtel Tout bleu et blanc</strong></h3>
+                                <p>Nuit à partir de 68<strong>€</strong></p>
+                                <i class="fas fa-star blue"></i>
+                                <i class="fas fa-star blue"></i>
+                                <i class="fas fa-star blue"></i>
+                                <i class="fas fa-star blue"></i>
+                                <i class="fas fa-star gray"></i>
+                            </div>                    
                     </div>
+                </a>
                 </div>
-            </a>
         </aside>
         <article class="article2">
             <h2>Activités a Marseille</h2>
             <div id="cardsArticle3">
                 <a href="#">
-                <div class="cardArticle3">
-                    <div class="cardImage3">
-                        <img src="#" alt="">
+                <div class="cardArticle4">
+                    <div class="cardImage4">
+                        <img src="./Projet 2 - Reservia/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="">
                         <div class="cardText3">
                             <h3><strong>Vieux port</strong></h3>                            
                         </div>
@@ -262,7 +286,7 @@
                 <a href="#">
                 <div class="cardArticle3">
                     <div class="cardImage3">
-                        <img src="#" alt="">
+                        <img src="./Projet 2 - Reservia/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="">
                         <div class="cardText3">
                             <h3><strong>Fort de Pomègues</strong></h3>
                         </div>
@@ -272,17 +296,18 @@
                 <a href="#">
                 <div class="cardArticle3">
                     <div class="cardImage3">
-                        <img src="#" alt="">
+                        <img src="./Projet 2 - Reservia/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="">
                         <div class="cardText3">
                             <h3><strong>Iles du Frioul</strong></h3>
                         </div>
                     </div>                    
                 </div>
             </a>
+
             <a href="#">
-                <div class="cardArticle3">
-                    <div class="cardImage3">
-                        <img src="#" alt="">
+                <div class="cardArticle4">
+                    <div class="cardImage4">
+                        <img src="./Projet 2 - Reservia/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="">
                         <div class="cardText3">
                             <h3><strong>Parc Nationale des Calanques</strong></h3>
                         </div>
@@ -292,7 +317,7 @@
             <a href="#">
                 <div class="cardArticle3">
                     <div class="cardImage3">
-                        <img src="#" alt="">
+                        <img src="./Projet 2 - Reservia/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="">
                         <div class="cardText3">
                             <h3><strong>Notre-Dame-de-la-Garde</strong></h3>
                         </div>
@@ -302,7 +327,7 @@
             <a href="#">
                 <div class="cardArticle3">
                     <div class="cardImage3">
-                        <img src="#" alt="">
+                        <img src="./Projet 2 - Reservia/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="">
                         <div class="cardText3">
                             <h3><strong>Parc Longchamp</strong></h3>
                         </div>
