Changment html et CSS

--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
             </button>
 
         </div>
-        <div class="filterContenair">   
+        <div class="filterContenair">
+            <div>
+                <h2>Filtres</h2>
+            </div>   
             <div class="blockFilter">
-                <div>
-                    <h2>Filtres</h2>
-                </div>
+               
                 <a href="#">
                     <div class="filter">
                         <i class="fas fa-money-bill-wave"></i> 
@@ -272,6 +273,38 @@
         </aside>
         <article class="article2">
             <h2>Activités a Marseille</h2>
+            <div class="bigimg">block
+                <div class="blocka">
+                    block a
+                    <div class="blockc">
+                        Vieux Port
+                    </div>
+                    <div class="blockd">
+                        block d
+                        <div class="blocke">
+                            Fort de Pomègues
+                        </div>
+                        <div class="blockf">
+                            Iles du Frioul
+                        </div>
+                    </div>                   
+                </div>
+                <div class="block1">
+                    block 1
+                    <div class="block2">
+                        Parc nationale des calanques
+                    </div>
+                    <div class="block3">
+                        block 3
+                        <div class="block4">
+                            Notre-Dame-de-la-Garde
+                        </div>
+                        <div class="block5">
+                            Parc Longchamp
+                        </div>
+                    </div>                   
+                </div>
+            </div>
             <div id="cardsArticle3">
                 <a href="#">
                 <div class="cardArticle4">
