--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site de reservation - Reservia</title>
     <link rel="icon" href="/Logo/Reservia.svg" />
-    <link rel="stylesheet" href="public/CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c5b5023680.js" crossorigin="anonymous"></script>
 </head>
 <body>
