--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <main class="filters">
         <div class="titleMain">
             <h1>Trouver votre hébergement pour des vacances de rêves</h1>
-            <p>En plein centre ville ou en pleine nature</p>
+            <p>En plein centre ville ou en pleine nature.</p>
         </div>
         <div class="search">
             <i></i>
