--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
     <title>Site de reservation - Reservia</title>
     <link rel="icon" href="/Logo/Reservia.svg" />
-    <link rel=“stylesheet” type=“text/css” href=“/style.css”>
+    <link rel=“stylesheet” type=“text/css” href=“style.css”>
     <script src="https://kit.fontawesome.com/c5b5023680.js" crossorigin="anonymous"></script>
 </head>
 <body>
