--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
     <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
     <title>Site de reservation - Reservia</title>
-    <link rel="icon" href="/Logo/Reservia.svg" />
-    <link rel=“stylesheet” type=“text/css” href=“style.css”>
+    <link rel="icon" type="image/png" sizes="16x16" href="./Projet 2 - Reservia/images/logo/Reservia.svg"/>
+    <link rel="stylesheet" href="./style.css"/>
     <script src="https://kit.fontawesome.com/c5b5023680.js" crossorigin="anonymous"></script>
 </head>
 <body>
