--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
     <title>Site de reservation - Reservia</title>
     <link rel="icon" type="image/png" sizes="16x16" href="./Projet 2 - Reservia/images/logo/Reservia.svg"/>
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href="./CSS/style.css"/>
     <script src="https://kit.fontawesome.com/c5b5023680.js" crossorigin="anonymous"></script>
 </head>
 <body>
