modif html et css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,7 +53,9 @@
             <p>En plein centre ville ou en pleine nature.</p>
         </div>
         <div id="search">
-            <i class="fas fa-map-marker-alt"></i>
+            <div class="mapPoint">
+                <i class="fas fa-map-marker-alt"></i>
+            </div>
             <input type="text" placeholder="Marseille, France">
             <button class="searchText">               
                     Recherche              
@@ -61,8 +63,8 @@
             <button class="searchIcon">
                 <i class="fas fa-search"></i>
             </button>
+       </div>
 
-        </div>
         <div class="filterContenair">
             <div>
                 <h2>Filtres</h2>
