--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="description" content="Organiser vos vacances avec Reservia !" />
 
-    <!-- Twitter Card data -->
+    <!-- Twitter Card dat -->
     <meta name="twitter:card" content="summary">
 
     <!-- Open Graph data -->
